EXTRA_DIST =				\
	test_all			\
	test_conversion			\
	test_csv			\
	test_datebookDB.txt		\
	test_hotsync			\
	test_sort_beginDate		\
	test_sort_endDate		\
	test_update			\
	test_update_advance		\
	test_update_advanceUnit		\
	test_update_alarm		\
	test_update_attributes		\
	test_update_begin		\
	test_update_beginDate		\
	test_update_category		\
	test_update_complex		\
	test_update_description		\
	test_update_end			\
	test_update_endDate		\
	test_update_note		\
	test_update_repeatEnd		\
	test_update_repeatEndDate	\
	test_update_repeatForever	\
	test_update_repeatFrequency	\
	test_update_repeatType		\
	test_update_repeatWeekdays	\
	test_update_uid			\
	test_update_untimed
